--- a/SRSDriver/Base.lproj/Main.storyboard
+++ b/SRSDriver/Base.lproj/Main.storyboard
@@ -553,22 +553,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cuD-fX-GBd" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ErP-bM-GK6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="cuD-fX-GBd" customClass="GMSMapView">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="OrderDetailMapTableViewCell" rowHeight="80" id="9oa-Wv-OqQ" customClass="OrderDetailMapTableViewCell" customModule="SRSDriver" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="328" width="375" height="80"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9oa-Wv-OqQ" id="f0f-XD-GXn">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home-map-marker" translatesAutoresizingMaskIntoConstraints="NO" id="vx4-da-UN6">
+                                                    <rect key="frame" x="16" y="16" width="22" height="22"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="22" id="C8d-Lz-qbq"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NZ0-7H-Na4">
+                                                    <rect key="frame" x="48" y="16" width="317" height="29"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30 meters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qKi-Jn-Cdc">
+                                                    <rect key="frame" x="48" y="53" width="66" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xpa-nv-eNj">
+                                                    <rect key="frame" x="125" y="61" width="240" height="1"/>
+                                                    <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="1" id="ecl-AR-Qao"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vx4-da-UN6" firstAttribute="top" secondItem="f0f-XD-GXn" secondAttribute="top" constant="16" id="1wb-lg-1TV"/>
+                                                <constraint firstItem="Xpa-nv-eNj" firstAttribute="leading" secondItem="qKi-Jn-Cdc" secondAttribute="trailing" constant="11" id="4id-ge-zpe"/>
+                                                <constraint firstAttribute="bottom" secondItem="NZ0-7H-Na4" secondAttribute="bottom" constant="35" id="ADS-k7-Xec"/>
+                                                <constraint firstItem="vx4-da-UN6" firstAttribute="leading" secondItem="f0f-XD-GXn" secondAttribute="leading" constant="16" id="GPf-23-S6F"/>
+                                                <constraint firstAttribute="trailing" secondItem="NZ0-7H-Na4" secondAttribute="trailing" constant="10" id="Kq3-3d-bab"/>
+                                                <constraint firstItem="NZ0-7H-Na4" firstAttribute="top" secondItem="vx4-da-UN6" secondAttribute="top" id="Mfv-dq-nyb"/>
+                                                <constraint firstItem="qKi-Jn-Cdc" firstAttribute="leading" secondItem="NZ0-7H-Na4" secondAttribute="leading" id="SdU-Zw-fo8"/>
+                                                <constraint firstAttribute="trailing" secondItem="Xpa-nv-eNj" secondAttribute="trailing" constant="10" id="ZLA-pz-0Zz"/>
+                                                <constraint firstItem="NZ0-7H-Na4" firstAttribute="leading" secondItem="vx4-da-UN6" secondAttribute="trailing" constant="10" id="cQJ-kY-fgt"/>
+                                                <constraint firstItem="Xpa-nv-eNj" firstAttribute="centerY" secondItem="qKi-Jn-Cdc" secondAttribute="centerY" id="thP-bc-26x"/>
+                                                <constraint firstAttribute="bottom" secondItem="qKi-Jn-Cdc" secondAttribute="bottom" constant="10" id="vmE-CL-MFn"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="distanceLabel" destination="qKi-Jn-Cdc" id="Lln-fP-7JS"/>
+                                            <outlet property="instructionIcon" destination="vx4-da-UN6" id="pL4-uj-ddx"/>
+                                            <outlet property="instructionsLabel" destination="NZ0-7H-Na4" id="FgA-Jg-Pk3"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="zNc-3f-ZWf" id="JTB-II-dmN"/>
+                                    <outlet property="delegate" destination="zNc-3f-ZWf" id="amQ-3J-e9v"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="cuD-fX-GBd" firstAttribute="leading" secondItem="CmC-vZ-ZXO" secondAttribute="leading" id="7zc-sM-Wl4"/>
-                            <constraint firstItem="cuD-fX-GBd" firstAttribute="trailing" secondItem="CmC-vZ-ZXO" secondAttribute="trailing" id="FPA-X3-JQ4"/>
-                            <constraint firstItem="cuD-fX-GBd" firstAttribute="top" secondItem="9Ya-lm-gfU" secondAttribute="top" id="u7u-bf-uHL"/>
-                            <constraint firstItem="cuD-fX-GBd" firstAttribute="bottom" secondItem="CmC-vZ-ZXO" secondAttribute="bottom" id="yXR-FZ-Mzq"/>
+                            <constraint firstItem="ErP-bM-GK6" firstAttribute="trailing" secondItem="CmC-vZ-ZXO" secondAttribute="trailing" id="9D4-4N-8p7"/>
+                            <constraint firstItem="ErP-bM-GK6" firstAttribute="top" secondItem="CmC-vZ-ZXO" secondAttribute="top" id="GDV-0S-qk8"/>
+                            <constraint firstItem="ErP-bM-GK6" firstAttribute="bottom" secondItem="CmC-vZ-ZXO" secondAttribute="bottom" id="L0L-86-78a"/>
+                            <constraint firstItem="ErP-bM-GK6" firstAttribute="leading" secondItem="CmC-vZ-ZXO" secondAttribute="leading" id="MDN-eh-dOg"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="CmC-vZ-ZXO"/>
                     </view>
                     <connections>
                         <outlet property="mapView" destination="cuD-fX-GBd" id="ItV-3u-yci"/>
+                        <outlet property="tableView" destination="ErP-bM-GK6" id="BSg-gD-4PK"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xX8-aP-sfO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -811,7 +876,7 @@
                                                         <constraint firstAttribute="width" secondItem="MoC-BP-Ha8" secondAttribute="height" multiplier="5:4" id="501-wC-WOu"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sD0-Nv-mUB">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sD0-Nv-mUB">
                                                     <rect key="frame" x="115.5" y="10" width="243.5" height="69.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
@@ -955,6 +1020,7 @@
         <image name="calendar" width="32" height="32"/>
         <image name="clock" width="32" height="32"/>
         <image name="close" width="32" height="32"/>
+        <image name="home-map-marker" width="22" height="22"/>
         <image name="list" width="32" height="32"/>
         <image name="logout" width="32" height="32"/>
         <image name="map" width="32" height="32"/>
