--- a/SRSDriver/Base.lproj/Main.storyboard
+++ b/SRSDriver/Base.lproj/Main.storyboard
@@ -39,6 +39,9 @@
                             </stackView>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TdH-cM-sHj">
                                 <rect key="frame" x="306" y="200" width="51" height="31"/>
+                                <connections>
+                                    <action selector="keepLogin:" destination="BYZ-38-t0r" eventType="valueChanged" id="osG-mf-HQR"/>
+                                </connections>
                             </switch>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vIe-jb-jsy">
                                 <rect key="frame" x="168" y="318" width="38" height="30"/>
@@ -64,6 +67,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="rL5-Vt-yKK"/>
                     <connections>
+                        <outlet property="keepLoginSwitch" destination="TdH-cM-sHj" id="apM-JP-gd3"/>
                         <outlet property="passwordTextField" destination="JnO-uZ-ngY" id="t33-Us-jfo"/>
                         <outlet property="userNameTextField" destination="teu-Ir-Yh9" id="KqQ-pf-fGG"/>
                         <segue destination="RD2-8f-A9x" kind="show" identifier="showHomeSegue" id="q9n-7f-7xf"/>
@@ -297,7 +301,6 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SNl-eV-9Yp">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
-                                <color key="backgroundColor" red="0.87843137250000003" green="0.29411764709999999" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
