--- a/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
+++ b/SRSDriver/App/OrderDetails/OrderScanItemTableViewCell.xib
@@ -44,8 +44,8 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wNy-UR-qkf">
-                                <rect key="frame" x="0.0" y="31" width="44.5" height="22"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="wNy-UR-qkf">
+                                <rect key="frame" x="0.0" y="31" width="54.5" height="22"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Qty:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="36Q-rM-k0Q">
                                         <rect key="frame" x="0.0" y="0.0" width="34" height="22"/>
@@ -54,7 +54,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRt-Dm-RIB">
-                                        <rect key="frame" x="34" y="0.0" width="10.5" height="22"/>
+                                        <rect key="frame" x="44" y="0.0" width="10.5" height="22"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
