[SRSDriver] - Implement message by routes

--- a/SRSDriver/Base.lproj/Main.storyboard
+++ b/SRSDriver/Base.lproj/Main.storyboard
@@ -1088,7 +1088,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LSm-ld-NKc">
-                                <rect key="frame" x="0.0" y="74" width="375" height="544"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteMessageTableViewCell" rowHeight="90" id="6bt-6v-OuU" customClass="RouteMessageTableViewCell" customModule="SRSDriver" customModuleProvider="target">
@@ -1104,14 +1104,14 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TgM-uZ-7VY">
-                                                    <rect key="frame" x="68" y="12" width="42" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZuW-Wd-Dmy">
+                                                    <rect key="frame" x="10" y="50" width="355" height="29.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZuW-Wd-Dmy">
-                                                    <rect key="frame" x="10" y="50" width="355" height="29.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ouq-6w-ha8">
+                                                    <rect key="frame" x="323" y="11.5" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -1119,23 +1119,27 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="YFr-kr-VbI" firstAttribute="top" secondItem="6dn-00-JmG" secondAttribute="top" constant="10" id="29q-1R-pGO"/>
-                                                <constraint firstAttribute="trailing" secondItem="TgM-uZ-7VY" secondAttribute="trailing" priority="250" constant="10" id="4fp-Rv-yKZ"/>
                                                 <constraint firstAttribute="bottom" secondItem="ZuW-Wd-Dmy" secondAttribute="bottom" constant="10" id="DVp-M5-9F2"/>
                                                 <constraint firstAttribute="trailing" secondItem="ZuW-Wd-Dmy" secondAttribute="trailing" constant="10" id="Kt8-4d-CvQ"/>
-                                                <constraint firstItem="TgM-uZ-7VY" firstAttribute="leading" secondItem="YFr-kr-VbI" secondAttribute="trailing" constant="10" id="M43-nE-LTg"/>
-                                                <constraint firstItem="TgM-uZ-7VY" firstAttribute="centerY" secondItem="YFr-kr-VbI" secondAttribute="centerY" id="MZV-fE-2Fg"/>
+                                                <constraint firstItem="ouq-6w-ha8" firstAttribute="leading" secondItem="YFr-kr-VbI" secondAttribute="trailing" priority="250" constant="8" id="N21-gv-goT"/>
+                                                <constraint firstItem="ouq-6w-ha8" firstAttribute="centerY" secondItem="YFr-kr-VbI" secondAttribute="centerY" id="VUv-0t-yhd"/>
                                                 <constraint firstItem="ZuW-Wd-Dmy" firstAttribute="top" secondItem="6dn-00-JmG" secondAttribute="top" constant="50" id="b9n-GH-V9J"/>
                                                 <constraint firstItem="ZuW-Wd-Dmy" firstAttribute="leading" secondItem="6dn-00-JmG" secondAttribute="leading" constant="10" id="fcY-gC-eR5"/>
+                                                <constraint firstAttribute="trailing" secondItem="ouq-6w-ha8" secondAttribute="trailing" constant="10" id="hCZ-fL-uCi"/>
                                                 <constraint firstItem="YFr-kr-VbI" firstAttribute="leading" secondItem="6dn-00-JmG" secondAttribute="leading" constant="10" id="wYj-Wf-cgx"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="authorLabel" destination="YFr-kr-VbI" id="3pI-fA-FZw"/>
-                                            <outlet property="contentLabel" destination="ZuW-Wd-Dmy" id="fu7-Sa-yhl"/>
-                                            <outlet property="createdAtLabel" destination="TgM-uZ-7VY" id="xuU-33-TkC"/>
+                                            <outlet property="authorLabel" destination="YFr-kr-VbI" id="ad4-5v-2ah"/>
+                                            <outlet property="contentLabel" destination="ZuW-Wd-Dmy" id="6tt-44-892"/>
+                                            <outlet property="createdAt" destination="ouq-6w-ha8" id="dAM-JS-Ufx"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Nf9-4Y-x7e" id="kfG-Tf-LdV"/>
+                                    <outlet property="delegate" destination="Nf9-4Y-x7e" id="BdA-RC-YWs"/>
+                                </connections>
                             </tableView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7iD-oV-Zb5">
                                 <rect key="frame" x="265" y="508" width="80" height="80"/>
@@ -1158,7 +1162,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="LSm-ld-NKc" firstAttribute="leading" secondItem="R56-qv-EMj" secondAttribute="leading" id="79e-TB-hYD"/>
-                            <constraint firstItem="LSm-ld-NKc" firstAttribute="top" secondItem="R56-qv-EMj" secondAttribute="top" constant="10" id="JF5-dw-UMP"/>
+                            <constraint firstItem="LSm-ld-NKc" firstAttribute="top" secondItem="R56-qv-EMj" secondAttribute="top" id="8OE-pj-QYj"/>
                             <constraint firstItem="R56-qv-EMj" firstAttribute="bottom" secondItem="LSm-ld-NKc" secondAttribute="bottom" id="gbR-LX-Gvw"/>
                             <constraint firstItem="R56-qv-EMj" firstAttribute="trailing" secondItem="7iD-oV-Zb5" secondAttribute="trailing" constant="30" id="hEt-rF-rvt"/>
                             <constraint firstItem="R56-qv-EMj" firstAttribute="trailing" secondItem="LSm-ld-NKc" secondAttribute="trailing" id="jQ5-ai-PV5"/>
@@ -1174,7 +1178,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RnA-SG-JlL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2666" y="1100"/>
+            <point key="canvasLocation" x="2664.8000000000002" y="1099.7001499250375"/>
         </scene>
     </scenes>
     <resources>
