--- a/SRSDriver/Base.lproj/Main.storyboard
+++ b/SRSDriver/Base.lproj/Main.storyboard
@@ -465,7 +465,7 @@
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GXO-ne-prN">
                                             <rect key="frame" x="0.0" y="0.0" width="182.5" height="50"/>
                                             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                            <state key="normal" title="Unable to Start"/>
+                                            <state key="normal" title="Unable to Finish"/>
                                             <connections>
                                                 <action selector="didClickUnableToStart:" destination="MAu-y5-iy0" eventType="touchUpInside" id="dqN-E2-pKn"/>
                                             </connections>
@@ -537,39 +537,24 @@
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="items"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fBa-D9-KH1">
-                                                    <rect key="frame" x="319" y="5" width="40" height="32"/>
-                                                    <color key="backgroundColor" red="0.87843137250000003" green="0.29411764709999999" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <rect key="frame" x="315" y="5" width="60" height="32"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="40" id="nTy-N8-YxS"/>
+                                                        <constraint firstAttribute="width" constant="60" id="nTy-N8-YxS"/>
                                                     </constraints>
                                                     <state key="normal" image="barcode-scan"/>
                                                     <connections>
                                                         <action selector="scanCode:" destination="fH7-gM-67t" eventType="touchUpInside" id="8qw-gt-WDa"/>
                                                     </connections>
                                                 </button>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ela-L0-UiE">
-                                                    <rect key="frame" x="10" y="5" width="227" height="40"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="hb3-Tz-hmM"/>
-                                                    </constraints>
-                                                    <connections>
-                                                        <action selector="resetScanList:" destination="fH7-gM-67t" eventType="touchUpInside" id="ZzJ-BA-MXH"/>
-                                                    </connections>
-                                                </button>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRc-Sq-15t">
-                                                    <rect key="frame" x="159" y="7" width="46" height="30"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" title="Button"/>
-                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="ela-L0-UiE" firstAttribute="top" secondItem="ZVd-cH-Hhk" secondAttribute="top" constant="5" id="5GP-6d-aG1"/>
                                                 <constraint firstItem="sPN-Wc-Dub" firstAttribute="top" secondItem="ZVd-cH-Hhk" secondAttribute="top" constant="10" id="Jdt-KH-BfA"/>
-                                                <constraint firstItem="ela-L0-UiE" firstAttribute="leading" secondItem="ZVd-cH-Hhk" secondAttribute="leading" constant="10" id="Jgm-rn-TZD"/>
-                                                <constraint firstItem="fBa-D9-KH1" firstAttribute="leading" secondItem="ela-L0-UiE" secondAttribute="trailing" constant="82" id="LYY-pN-Wds"/>
-                                                <constraint firstAttribute="trailing" secondItem="fBa-D9-KH1" secondAttribute="trailing" constant="16" id="Ntb-57-QjJ"/>
+                                                <constraint firstAttribute="trailing" secondItem="fBa-D9-KH1" secondAttribute="trailing" id="Ntb-57-QjJ"/>
                                                 <constraint firstItem="sPN-Wc-Dub" firstAttribute="leading" secondItem="ZVd-cH-Hhk" secondAttribute="leading" constant="10" id="jYa-rJ-EfS"/>
                                                 <constraint firstItem="fBa-D9-KH1" firstAttribute="top" secondItem="ZVd-cH-Hhk" secondAttribute="top" constant="5" id="qbB-v4-r6X"/>
                                             </constraints>
@@ -821,10 +806,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="8pQ-gB-aqf">
-                                <rect key="frame" x="10" y="587" width="355" height="60"/>
+                                <rect key="frame" x="10" y="597" width="355" height="50"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iO7-RM-eV7">
-                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="172.5" height="50"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <state key="normal" title="Cancel"/>
                                         <userDefinedRuntimeAttributes>
@@ -836,11 +821,11 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mh1-oh-F24">
-                                        <rect key="frame" x="182.5" y="0.0" width="172.5" height="60"/>
+                                        <rect key="frame" x="182.5" y="0.0" width="172.5" height="50"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                                        <state key="normal" title="Done"/>
+                                        <state key="normal" title="Submit"/>
                                         <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="done"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="submit"/>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
                                             <action selector="didClickFinish:" destination="MAu-y5-iy0" eventType="touchUpInside" id="kbV-UY-mbJ"/>
@@ -849,14 +834,14 @@
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="CXN-Rw-cTi"/>
+                                    <constraint firstAttribute="height" constant="50" id="CXN-Rw-cTi"/>
                                 </constraints>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Rng-qX-yRi">
                                 <rect key="frame" x="10" y="30" width="355" height="597"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dt4-PI-Ytx" customClass="SignatureView" customModule="SRSDriver" customModuleProvider="target">
-                                <rect key="frame" x="10" y="30" width="375" height="547"/>
+                                <rect key="frame" x="10" y="30" width="375" height="557"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                         </subviews>
@@ -878,8 +863,10 @@
                     </view>
                     <connections>
                         <outlet property="controlsContainerView" destination="8pQ-gB-aqf" id="Tbs-wR-RvM"/>
+                        <outlet property="finishButton" destination="mh1-oh-F24" id="PyF-pO-hx1"/>
                         <outlet property="signatureImgView" destination="Rng-qX-yRi" id="t9q-J1-sd5"/>
                         <outlet property="signatureView" destination="dt4-PI-Ytx" id="SMT-1v-1R1"/>
+                        <outlet property="unableToFinishButton" destination="iO7-RM-eV7" id="dxC-hU-MOU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tzp-cO-nrW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -949,16 +936,16 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l55-mx-h3o">
-                                <rect key="frame" x="265" y="557" width="80" height="80"/>
+                                <rect key="frame" x="285" y="577" width="60" height="60"/>
                                 <color key="backgroundColor" red="0.8862745098" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="PuQ-vg-mJc"/>
+                                    <constraint firstAttribute="width" constant="60" id="PuQ-vg-mJc"/>
                                     <constraint firstAttribute="width" secondItem="l55-mx-h3o" secondAttribute="height" multiplier="1:1" id="d9H-0p-fMe"/>
                                 </constraints>
                                 <state key="normal" image="plus_white"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="40"/>
+                                        <real key="value" value="30"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
@@ -1039,15 +1026,15 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="02O-y5-Gxn">
-                                <rect key="frame" x="255" y="547" width="80" height="80"/>
+                                <rect key="frame" x="275" y="567" width="60" height="60"/>
                                 <color key="backgroundColor" red="0.8862745098" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="XgR-LH-u7Q"/>
+                                    <constraint firstAttribute="width" constant="60" id="XgR-LH-u7Q"/>
                                 </constraints>
                                 <state key="normal" image="plus_white"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="40"/>
+                                        <real key="value" value="30"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
@@ -1244,16 +1231,16 @@
                                 </connections>
                             </tableView>
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7iD-oV-Zb5">
-                                <rect key="frame" x="265" y="508" width="80" height="80"/>
+                                <rect key="frame" x="285" y="528" width="60" height="60"/>
                                 <color key="backgroundColor" red="0.8862745098" green="0.23529411759999999" blue="0.23529411759999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="7iD-oV-Zb5" secondAttribute="height" multiplier="1:1" id="8gL-QF-fdF"/>
-                                    <constraint firstAttribute="width" constant="80" id="rgr-dC-Wpe"/>
+                                    <constraint firstAttribute="width" constant="60" id="rgr-dC-Wpe"/>
                                 </constraints>
                                 <state key="normal" image="plus_white"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <real key="value" value="40"/>
+                                        <real key="value" value="30"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
